Refactor as per FindBugs suggestions