@@ -71,7 +71,7 @@ public class IndexGitHistoryJob implements Job {
             String message = rev.getFullMessage();
             String author = rev.getAuthorIdent().getName();
 
-            Date expiry = new Date(new Long(rev.getCommitTime()) * 1000);
+            Date expiry = new Date(Long.valueOf(rev.getCommitTime()) * 1000);
             System.out.println(expiry.toString() + " " + rev.getCommitTime() + " " + rev.getName());
 
             gitChangeSets.add(new GitChangeSet(message, author, rev.getName(), expiry));
